# CameraCalibration

./: .gitignore  CMakeLists.txt  README.md  TODO.md  helpers.hpp  optimizer_test.cpp  pclviewer.cpp  pclviewer.h  pclviewer.ui
backup/src/: myviz.cpp
config/: config.json  config.xml  config_1.xml  config_2.xml  config_22.xml  config_3.xml  config_32.xml  config_33.xml  config_4.xml  config_44.xml
config/Plane_1/: config_discrete_optimzation.xml  config_discrete_optimzation_gd.xml  config_discrete_optimzation_gd_plane.xml
config/data_1/: config_discrete_opt.xml
config/data_1_1/: config_dco.xml  config_gd.xml  config_initial.xml  config_initial_raw.xml  config_three.xml  config_two.xml
config/data_2/: config_dco.xml  config_discrete_opt.xml  config_double.xml  config_gd.xml  config_initial.xml  config_initial_raw.xml  config_one.xml  config_three.xml
config/data_3/: config_double.xml  config_initial.xml
config/data_3_1/: config_dco.xml  config_discrete_opt.xml  config_discrete_opt_avg.xml  config_ex_2.xml  config_gd.xml  config_initial.xml  config_naive_brute_force.xml  config_one.xml  config_two.xml
config/plane/: config_good_avg.xml  config_good_max.xml  config_initial.xml  config_rot.xml  config_trans.xml  config_trans_rot.xml
data/Part_1/: BaseToFlange.txt  README.txt.docx  coordinate.txt  (+1 more)
scripts/: cluster_jointangles.py  input.tmp  input_correct.tmp  output.tmp  run_experiments.sh  run_gd_experiments.sh  svd.py
src/: algorithms.cpp  algorithms.hpp  backup.cpp  camera_calibration_optimization.cpp  cloud_analyzer.cpp  control_handler.cpp  double_object_optimizer_test.cpp  error_calculation_gd_ransac.cpp  gradient_descent_planes.cpp  gradient_descent_ransac.cpp  gradient_descent_ransac_backup.cpp  gradient_descent_test.cpp  helpers.cpp  helpers.hpp  interface_handler.cpp  optimizer_test.cpp  pclviewer.cpp  pclviewer.h  pclviewer.ui  sliders_handler.cpp  units_converter.cpp
(+169 files in other folders)
